--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http-toolkit-server",
+  "name": "httptoolkit-server",
   "version": "0.0.1",
   "author": "Tim Perry <pimterry@gmail.com>",
   "types": "lib/index.d.ts",
@@ -12,16 +12,20 @@
     "/lib"
   ],
   "scripts": {
-    "prepack": "rm -rf lib && tsc -b",
-    "test": "echo NO TESTS"
+    "start": "./bin/run",
+    "prepack": "rm -rf lib && tsc -b"
   },
-  "repository": "pimterry/http-toolkit-server",
-  "homepage": "https://github.com/pimterry/http-toolkit-server",
-  "bugs": "https://github.com/pimterry/http-toolkit-server/issues",
+  "repository": "httptoolkit/httptoolkit-server",
+  "homepage": "https://github.com/httptoolkit/httptoolkit-server",
+  "bugs": "https://github.com/httptoolkit/httptoolkit-server/issues",
   "dependencies": {
     "@oclif/command": "^1.5.4",
     "@oclif/config": "^1.8.8",
     "@oclif/plugin-help": "^2.1.3",
+    "@types/env-paths": "^1.0.2",
+    "env-paths": "^1.0.0",
+    "graphql-yoga": "^1.16.7",
+    "mockttp": "^0.10.1",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
@@ -33,9 +37,16 @@
     "node": ">=8.0.0"
   },
   "keywords": [
+    "http",
+    "https",
+    "proxy",
+    "debugger",
+    "debugging",
+    "intercept",
+    "httptoolkit",
     "http-toolkit"
   ],
-  "license": "N/A",
+  "license": "Apache-2.0",
   "oclif": {
     "bin": "htk-server"
   }
