--- a/package.json
+++ b/package.json
@@ -13,23 +13,33 @@
   ],
   "scripts": {
     "start": "./bin/run",
-    "prepack": "rm -rf lib && tsc -b"
+    "prepack": "rm -rf lib && tsc -b",
+    "test": "mocha -r ts-node/register 'test/**/*.spec.ts'"
   },
   "repository": "httptoolkit/httptoolkit-server",
   "homepage": "https://github.com/httptoolkit/httptoolkit-server",
   "bugs": "https://github.com/httptoolkit/httptoolkit-server/issues",
   "dependencies": {
+    "@james-proxy/james-browser-launcher": "^1.3.2",
     "@oclif/command": "^1.5.4",
     "@oclif/config": "^1.8.8",
     "@oclif/plugin-help": "^2.1.3",
     "@types/env-paths": "^1.0.2",
+    "@types/lodash": "^4.14.117",
     "env-paths": "^1.0.0",
     "graphql-yoga": "^1.16.7",
+    "lodash": "^4.17.11",
     "mockttp": "^0.10.1",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.6",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.0",
+    "@types/tmp": "0.0.33",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "tmp": "0.0.33",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.3"
   },
