--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
-  "compilerOptions": {
-    "declaration": true,
-    "importHelpers": true,
-    "module": "commonjs",
-    "outDir": "lib",
-    "rootDir": "src",
-    "strict": true,
-    "target": "es2017",
-    "composite": true,
-    "resolveJsonModule": true
-  },
-  "include": [
-    "src/**/*"
-  ]
+    "compilerOptions": {
+        "declaration": true,
+        "importHelpers": true,
+        "module": "commonjs",
+        "outDir": "lib",
+        "strict": true,
+        "target": "es2017",
+        "composite": true,
+        "resolveJsonModule": true,
+        "typeRoots" : [
+            "./node_modules/@types",
+            "./custom-typings"
+        ]
+    },
+    "include": [
+        "src/**/*",
+        "custom-typings/**/*.d.ts",
+    ]
 }
