Compile on publish only, not prepack
When installed via git, we don't need to compile, and
we can effectively treat this as a dev environment.
Tsconfig will be present, so the CLI will run via
ts-node directly.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "start": "./bin/run",
-    "prepack": "rm -rf lib && tsc -b",
+    "prepublishOnly": "rm -rf lib && tsc -b",
     "test": "mocha -r ts-node/register 'test/**/*.spec.ts'"
   },
   "repository": "httptoolkit/httptoolkit-server",
