--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@oclif/plugin-help": "^2.1.3",
     "@types/env-paths": "^1.0.2",
     "@types/lodash": "^4.14.117",
+    "@types/rimraf": "^2.0.2",
     "env-paths": "^1.0.0",
     "graphql-yoga": "^1.16.7",
     "lodash": "^4.17.11",
     "mockttp": "^0.11.0",
+    "rimraf": "^2.6.2",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
