--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
     "@oclif/command": "^1.5.4",
     "@oclif/config": "^1.8.8",
     "@oclif/plugin-help": "^2.1.3",
-    "@types/env-paths": "^1.0.2",
-    "@types/lodash": "^4.14.117",
-    "@types/rimraf": "^2.0.2",
     "env-paths": "^1.0.0",
     "graphql-yoga": "^1.16.7",
     "lodash": "^4.17.11",
@@ -35,10 +32,15 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.15",
     "@types/chai": "^4.1.6",
+    "@types/env-paths": "^1.0.2",
+    "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.0",
+    "@types/rimraf": "^2.0.2",
     "@types/tmp": "0.0.33",
+    "@types/ws": "^6.0.1",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "tmp": "0.0.33",
