Update mockttp and fix package.json importing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "outDir": "lib",
         "strict": true,
         "target": "es2017",
+        "resolveJsonModule": true,
         "composite": true,
         "typeRoots" : [
             "./node_modules/@types",
