--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
 sudo: required
 language: node_js
 node_js:
-    - 'node'
-    - '10'
-    - '8'
+- node
+- '10'
+- '8'
 install:
-    - npm install --global npm@4
-    - npm install
+- npm install --global npm@4
+- npm install
 before_script:
-    - sudo chown root /opt/google/chrome/chrome-sandbox
-    - sudo chmod 4755 /opt/google/chrome/chrome-sandbox
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
+- sudo chown root /opt/google/chrome/chrome-sandbox
+- sudo chmod 4755 /opt/google/chrome/chrome-sandbox
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 script:
-    - npm test
+- npm test
+- npm run build
 addons:
-    chrome: stable
-    firefox: latest
+  chrome: stable
+  firefox: latest
