--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@oclif/command": "^1.5.4",
     "@oclif/config": "^1.8.8",
     "@oclif/plugin-help": "^2.1.3",
+    "@oclif/plugin-update": "^1.3.7",
     "env-paths": "^1.0.0",
     "graphql-yoga": "^1.16.7",
     "lodash": "^4.17.11",
@@ -67,6 +68,10 @@
   "license": "Apache-2.0",
   "oclif": {
     "bin": "httptoolkit-server",
+    "commands": "./lib/commands",
+    "plugins": [
+      "@oclif/plugin-update"
+    ],
     "update": {
       "s3": {
         "host": "https://github.com/httptoolkit/httptoolkit-server/releases/download/v0.0.3/",
