--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-update": "^1.3.8",
     "env-paths": "^1.0.0",
+    "graphql": "^14.0.2",
     "graphql-yoga": "^1.16.7",
     "lodash": "^4.17.11",
     "mockttp": "^0.12.2",
