--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@oclif/config": "^1.8.8",
     "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-update": "^1.3.8",
+    "async-mutex": "^0.1.3",
     "env-paths": "^1.0.0",
     "graphql": "^14.0.2",
     "graphql-yoga": "^1.16.7",
