--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.0",
+    "@types/request-promise-native": "^1.0.15",
     "@types/rimraf": "^2.0.2",
     "@types/tmp": "0.0.33",
     "@types/ws": "^6.0.1",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "tmp": "0.0.33",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.3"
