--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:src": "rm -rf lib && tsc -b",
     "build:pack": "oclif-dev manifest && oclif-dev pack",
     "prepack": "npm run build:src && oclif-dev manifest",
-    "test": "mocha -r ts-node/register 'test/**/*.spec.ts'"
+    "test": "TS_NODE_FILES=true mocha -r ts-node/register 'test/**/*.spec.ts'"
   },
   "repository": "httptoolkit/httptoolkit-server",
   "homepage": "https://github.com/httptoolkit/httptoolkit-server",
@@ -52,6 +52,7 @@
     "@types/tmp": "0.0.33",
     "@types/ws": "^6.0.1",
     "chai": "^4.2.0",
+    "graphql.js": "^0.6.1",
     "mocha": "^5.2.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
