--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "/lib"
   ],
   "scripts": {
-    "start": "./bin/run start",
+    "start": "node-dev ./bin/run start",
     "build": "npm run build:src && npm run build:pack",
     "build:src": "rm -rf lib && tsc -b",
     "build:pack": "oclif-dev manifest && oclif-dev pack",
@@ -54,6 +54,7 @@
     "chai": "^4.2.0",
     "graphql.js": "^0.6.1",
     "mocha": "^5.2.0",
+    "node-dev": "^3.1.3",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "tmp": "0.0.33",
