--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-update": "^1.3.8",
     "@sentry/node": "^4.5.0",
+    "@types/command-exists": "^1.2.0",
     "async-mutex": "^0.1.3",
+    "command-exists": "^1.2.8",
     "env-paths": "^1.0.0",
     "graphql": "^14.0.2",
     "graphql-yoga": "^1.16.7",
     "lodash": "^4.17.11",
     "mockttp": "^0.12.6",
+    "node-gsettings-wrapper": "^0.5.0",
     "rimraf": "^2.6.2",
     "tslib": "^1.9.3"
   },
