--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 - '10'
 - '8'
 before_install:
-- sudo apt-get install p7zip-full
+- sudo apt-get install p7zip-full xterm
 install:
 - npm install --global npm@4
 - npm install
