--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.11",
     "mockttp": "^0.12.6",
     "node-gsettings-wrapper": "^0.5.0",
+    "osx-find-executable": "^1.0.0",
     "rimraf": "^2.6.2",
     "tslib": "^1.9.3"
   },
