--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "httptoolkit-server",
-  "version": "0.1.14",
+  "version": "0.1.15-test",
   "author": "Tim Perry <pimterry@gmail.com>",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
