--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ node_js:
 before_install:
 - sudo apt-get install p7zip-full xterm
 install:
-- npm install --global npm@4
-- npm install
+- npm ci
 services:
 - xvfb
 before_script:
