--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "async-mutex": "^0.1.3",
     "command-exists": "^1.2.8",
     "env-paths": "^1.0.0",
+    "global-agent": "^1.12.2",
     "graphql": "^14.0.2",
     "graphql-yoga": "^1.16.7",
     "lodash": "^4.17.11",
