--- a/package.json
+++ b/package.json
@@ -59,15 +59,25 @@
     "@types/rimraf": "^2.0.2",
     "@types/tmp": "0.0.33",
     "@types/ws": "^6.0.1",
+    "axios": "^0.19.0",
+    "bent": "^1.5.13",
     "chai": "^4.2.0",
+    "got": "^9.6.0",
     "graphql.js": "^0.6.1",
     "mocha": "^5.2.0",
+    "needle": "^2.4.0",
     "node-dev": "^3.1.3",
+    "node-fetch": "^2.6.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "reqwest": "^2.0.5",
+    "stripe": "^7.4.0",
+    "superagent": "^5.1.0",
     "tmp": "0.0.33",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "unirest": "^0.6.0",
+    "xhr2": "^0.2.0"
   },
   "engines": {
     "node": ">=8.0.0"
