--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "bugs": "https://github.com/httptoolkit/httptoolkit-server/issues",
   "dependencies": {
     "@httptoolkit/browser-launcher": "^1.5.0",
+    "@httptoolkit/osx-find-executable": "^1.1.0",
     "@oclif/command": "^1.5.4",
     "@oclif/config": "^1.8.8",
     "@oclif/plugin-help": "^2.1.3",
@@ -42,7 +43,6 @@
     "lodash": "^4.17.13",
     "mockttp": "^0.17.3",
     "node-gsettings-wrapper": "^0.5.0",
-    "osx-find-executable": "^1.0.0",
     "rimraf": "^2.6.2",
     "tslib": "^1.9.3"
   },
