Build a bundled CLI with webpack for performance
This reduces startup time on my machine by approx 40%, likely much more
on machines with non-SSDs or active AV. Will also allow us (shortly) to
dramatically shrink the deployed server size too.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "declaration": true,
         "importHelpers": true,
         "module": "commonjs",
+        "sourceMap": true,
         "rootDir": "src",
         "outDir": "lib",
         "strict": true,
