--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@httptoolkit/browser-launcher": "^1.5.0",
     "@httptoolkit/osx-find-executable": "^1.1.0",
     "@oclif/command": "^1.5.4",
-    "@oclif/config": "^1.8.8",
+    "@oclif/config": "^1.13.3",
     "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-update": "^1.3.8",
     "@sentry/node": "^5.4.3",
@@ -62,9 +62,11 @@
     "axios": "^0.19.0",
     "bent": "^1.5.13",
     "chai": "^4.2.0",
+    "copy-webpack-plugin": "^5.0.4",
     "got": "^9.6.0",
     "graphql.js": "^0.6.1",
     "mocha": "^5.2.0",
+    "native-ext-loader": "^2.3.0",
     "needle": "^2.4.0",
     "node-dev": "^3.1.3",
     "node-fetch": "^2.6.0",
@@ -74,9 +76,13 @@
     "stripe": "^7.4.0",
     "superagent": "^5.1.0",
     "tmp": "0.0.33",
+    "ts-loader": "^6.0.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "unirest": "^0.6.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
     "xhr2": "^0.2.0"
   },
   "engines": {
