--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "node-dev ./bin/run start",
     "build": "npm run build:src && npm run build:release",
     "build:src": "rm -rf lib && tsc -b",
-    "build:release": "oclif-dev manifest && ./build-release.sh linux && ./build-release.sh darwin && ./build-release.sh win32",
+    "build:release": "oclif-dev manifest && webpack && ts-node ./pack.ts",
     "prepack": "npm run build:src && oclif-dev manifest",
     "test": "TS_NODE_FILES=true mocha -r ts-node/register 'test/**/*.spec.ts'"
   },
@@ -52,6 +52,7 @@
     "@types/chai": "^4.1.6",
     "@types/env-paths": "^1.0.2",
     "@types/express": "^4.16.1",
+    "@types/fs-extra": "^8.0.0",
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.0",
@@ -63,6 +64,7 @@
     "bent": "^1.5.13",
     "chai": "^4.2.0",
     "copy-webpack-plugin": "^5.0.4",
+    "fs-extra": "^8.1.0",
     "got": "^9.6.0",
     "graphql.js": "^0.6.1",
     "mocha": "^5.2.0",
@@ -105,6 +107,13 @@
     "commands": "./lib/commands",
     "plugins": [
       "@oclif/plugin-update"
+    ],
+    "dependenciesToPackage": [
+      "@oclif/command",
+      "@oclif/config",
+      "@oclif/plugin-help",
+      "@oclif/plugin-update",
+      "@sentry/node"
     ],
     "update": {
       "s3": {
