--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "needle": "^2.4.0",
     "node-dev": "^3.1.3",
     "node-fetch": "^2.6.0",
+    "node-noop": "^1.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "reqwest": "^2.0.5",
