--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.19.4",
+    "@sentry/webpack-plugin": "^1.8.1",
     "@types/aws-lambda": "^8.10.15",
     "@types/chai": "^4.1.6",
     "@types/env-paths": "^1.0.2",
