--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "lodash": "^4.17.13",
     "mockttp": "^0.18.0",
     "node-gsettings-wrapper": "^0.5.0",
+    "registry-js": "^1.4.0",
     "rimraf": "^2.6.2",
-    "tslib": "^1.9.3"
+    "tslib": "^1.9.3",
+    "win-version-info": "^3.0.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.19.4",
@@ -70,7 +72,6 @@
     "got": "^9.6.0",
     "graphql.js": "^0.6.1",
     "mocha": "^5.2.0",
-    "native-ext-loader": "^2.3.0",
     "needle": "^2.4.0",
     "node-dev": "^3.1.3",
     "node-fetch": "^2.6.0",
@@ -115,7 +116,9 @@
       "@oclif/command",
       "@oclif/config",
       "@oclif/plugin-help",
-      "@oclif/plugin-update"
+      "@oclif/plugin-update",
+      "registry-js",
+      "win-version-info"
     ],
     "update": {
       "s3": {
