--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@oclif/config": "^1.13.3",
     "@oclif/plugin-help": "^2.1.3",
     "@oclif/plugin-update": "^1.3.8",
-    "@sentry/node": "^5.4.3",
+    "@sentry/integrations": "^5.6.1",
+    "@sentry/node": "^5.6.2",
     "@types/command-exists": "^1.2.0",
     "async-mutex": "^0.1.3",
     "command-exists": "^1.2.8",
