--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "graphql-yoga": "^1.18.1",
     "lodash": "^4.17.13",
     "mockttp": "^0.19.0",
+    "node-forge": "^0.9.0",
     "node-gsettings-wrapper": "^0.5.0",
     "registry-js": "^1.4.0",
     "rimraf": "^2.6.2",
