--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sentry/node": "^5.6.2",
     "@types/command-exists": "^1.2.0",
     "async-mutex": "^0.1.3",
+    "chrome-remote-interface": "^0.28.0",
     "command-exists": "^1.2.8",
     "env-paths": "^1.0.0",
     "global-agent": "^2.0.0",
@@ -46,6 +47,7 @@
     "mockttp": "^0.19.1",
     "node-forge": "^0.9.0",
     "node-gsettings-wrapper": "^0.5.0",
+    "portfinder": "^1.0.25",
     "registry-js": "^1.4.0",
     "rimraf": "^2.6.2",
     "tslib": "^1.9.3",
