--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@sentry/integrations": "^5.10.2",
     "@sentry/node": "^5.10.2",
     "@types/command-exists": "^1.2.0",
+    "adbkit": "^2.11.1",
     "async-mutex": "^0.1.3",
     "chrome-remote-interface": "^0.28.0",
     "command-exists": "^1.2.8",
