--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "node-dev ./bin/run start",
     "build": "npm run build:src && npm run build:release",
-    "build:src": "rm -rf lib && tsc -b",
+    "build:src": "rm -rf lib && tsc -b --force",
     "build:release": "oclif-dev manifest && webpack && ts-node ./pack.ts",
     "prepack": "npm run build:src && oclif-dev manifest",
     "test": "TS_NODE_FILES=true mocha -r ts-node/register 'test/**/*.spec.ts'",
