--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "command-exists": "^1.2.8",
     "cors-gate": "^1.1.3",
     "env-paths": "^1.0.0",
+    "ffi-napi": "^3.0.0",
     "global-agent": "^2.0.0",
     "global-tunnel-ng": "^2.7.1",
     "graphql": "^14.0.2",
@@ -67,6 +68,7 @@
     "@types/chai": "^4.1.6",
     "@types/env-paths": "^1.0.2",
     "@types/express": "^4.16.1",
+    "@types/ffi-napi": "^2.4.2",
     "@types/fs-extra": "^8.0.0",
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
