--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "reqwest": "^2.0.5",
+    "string-replace-loader": "^2.3.0",
     "stripe": "^7.4.0",
     "superagent": "^5.1.0",
     "tarball-extract": "0.0.6",
