Force test exit, to avoid issues with left-over keep-alive sockets
This probably requires a proper fix in Mockttp - if the downstream
socket gets closed, we should ensure we kill the upstream socket
too. Seems that's not happening right now though, and it doesn't
need to block anything else.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:src": "rm -rf lib && tsc -b --force",
     "build:release": "oclif-dev manifest && webpack && ts-node ./pack.ts",
     "prepack": "npm run build:src && oclif-dev manifest",
-    "test": "TS_NODE_FILES=true mocha -r ts-node/register 'test/**/*.spec.ts'",
+    "test": "TS_NODE_FILES=true mocha --exit -r ts-node/register 'test/**/*.spec.ts'",
     "test:release": "TEST_BUILT_TARBALL=1 npm run test"
   },
   "repository": "httptoolkit/httptoolkit-server",
