--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/httptoolkit/httptoolkit-server",
   "bugs": "https://github.com/httptoolkit/httptoolkit-server/issues",
   "dependencies": {
+    "@httptoolkit/adbkit": "^2.11.2-crashfix",
     "@httptoolkit/browser-launcher": "^1.7.3",
     "@httptoolkit/osx-find-executable": "^2.0.0",
     "@oclif/command": "^1.5.4",
@@ -37,7 +38,6 @@
     "@types/command-exists": "^1.2.0",
     "@types/node-fetch": "^2.5.4",
     "@types/tmp": "0.0.33",
-    "adbkit": "^2.11.1",
     "async-mutex": "^0.1.3",
     "chrome-remote-interface": "^0.28.0",
     "command-exists": "^1.2.8",
