Don't deploy non-version tagged releases
We could use Travis's conditions on the release to enforce this, but
that would result in the binaries not being deploy whilst the manifests
were (because that resets TRAVIS_TAG) which is pretty bad (it would
block all autoupdates until the next release).

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,11 @@ jobs:
         - |
           echo "Travis tag was $TRAVIS_TAG"
 
+          if ! [[ $TRAVIS_TAG =~ ^v.*$" ]]; then
+            echo 'Non-version tag, rejecting deploy'
+            exit 1
+          fi
+
           if ! [[ $DEPLOY_STEP ]]; then
             export DEPLOY_STEP=1
             echo 'About to deploy new tag'
