Simplify from apollo/graphql-yoga to just express-graphql
The same has also just happened in Mockttp, which should nicely
reduce the bundlesize and complexity of all this, once that
update comes across.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/httptoolkit/httptoolkit-server",
   "bugs": "https://github.com/httptoolkit/httptoolkit-server/issues",
   "dependencies": {
+    "@graphql-tools/schema": "^6.0.18",
+    "@graphql-tools/utils": "^6.0.18",
     "@httptoolkit/adbkit": "^2.11.2-crashfix",
     "@httptoolkit/browser-launcher": "^1.7.3",
     "@httptoolkit/osx-find-executable": "^2.0.0",
@@ -36,17 +38,20 @@
     "@sentry/integrations": "^5.10.2",
     "@sentry/node": "^5.10.2",
     "@types/command-exists": "^1.2.0",
+    "@types/cors": "^2.8.7",
+    "@types/graphql": "^14.2.3",
     "@types/node-fetch": "^2.5.4",
     "@types/tmp": "0.0.33",
     "async-mutex": "^0.1.3",
     "chrome-remote-interface": "^0.28.0",
     "command-exists": "^1.2.8",
+    "cors": "^2.8.5",
     "cors-gate": "^1.1.3",
     "env-paths": "^1.0.0",
+    "express-graphql": "^0.11.0",
     "global-agent": "^2.0.0",
     "global-tunnel-ng": "^2.7.1",
-    "graphql": "^14.0.2",
-    "graphql-yoga": "^1.18.1",
+    "graphql": "^14.7.0",
     "lodash": "^4.17.19",
     "mockttp": "^0.21.2",
     "node-fetch": "^2.6.0",
