Dedupe some dependencies to reduce the bundle size

--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "global-agent": "^2.0.0",
     "global-tunnel-ng": "^2.7.1",
     "graphql": "^14.7.0",
+    "iconv-lite": "^0.4.24",
     "lodash": "^4.17.19",
+    "mime-types": "^2.1.27",
     "mockttp": "^1.0.0",
     "node-fetch": "^2.6.0",
     "node-forge": "^0.9.0",
