--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@graphql-tools/schema": "^6.0.18",
     "@graphql-tools/utils": "^6.0.18",
-    "@httptoolkit/adbkit": "^2.11.2-crashfix",
+    "@httptoolkit/adbkit": "^2.11.2-crashfix-updateforge",
     "@httptoolkit/browser-launcher": "^1.7.3",
     "@httptoolkit/osx-find-executable": "^2.0.0",
     "@oclif/command": "^1.5.4",
@@ -57,7 +57,7 @@
     "mime-types": "^2.1.27",
     "mockttp": "^1.0.0",
     "node-fetch": "^2.6.0",
-    "node-forge": "^0.9.0",
+    "node-forge": "^0.9.1",
     "node-gsettings-wrapper": "^0.5.0",
     "portfinder": "^1.0.25",
     "registry-js": "^1.10.0",
