--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,31 @@ jobs:
           name: distributables
           path: build/dist/*
           if-no-files-found: error
+  publish:
+    name: Publish a release
+    runs-on: "ubuntu-18.04"
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    needs: build
+    steps:
+      - name: Get our distributables
+        uses: actions/download-artifact@v2
+        with:
+          name: distributables
+          path: built-distributables
+
+      - name: Upload server release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./built-distributables/v*/*
+          file_glob: true
+          tag: ${{ github.ref }}
+
+      - name: Upload latest manifest
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./built-distributables/latest-manifest/*
+          file_glob: true
+          tag: test-latest-manifest
+          overwrite: true
