--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     name: Build & test
     runs-on: ubuntu-18.04
+    container: httptoolkit/act-build-base
     steps:
       - uses: actions/checkout@v2
 
@@ -24,9 +25,14 @@ jobs:
 
       - run: npm ci
 
+      - name: Install test environment
+        run: |
+          apt-get update
+          apt-get install p7zip-full xterm
+          cp test/chrome-docker-wrapper.sh /usr/local/bin/google-chrome
       - run: npm run build
-      - run: npm run test
-      - run: npm run test:release
+      - run: xvfb-run npm run test
+      - run: xvfb-run npm run test:release
 
       - uses: actions/upload-artifact@v2
         with:
