Fix $HOME permissions to make Firefox happy
Without this, FF refuses to start, because we're running as root but
in a $HOME owned by somebody else.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
           apt-get update
           apt-get install p7zip-full xterm
           cp test/chrome-docker-wrapper.sh /usr/local/bin/google-chrome
+
+          # Fix $HOME perms to make Firefox happy
+          chown $(whoami) $HOME
       - run: npm run build
       - run: xvfb-run npm run test
       - run: xvfb-run npm run test:release
