--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,13 +52,13 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: distributables
-          path: built-distributables
+          path: distributables
 
       - name: Upload server release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./built-distributables/v*/*
+          file: ./distributables/*/*
           file_glob: true
           tag: ${{ github.ref }}
 
@@ -66,7 +66,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./built-distributables/latest-manifest/*
+          file: ./distributables/latest-manifest/*
           file_glob: true
           tag: test-latest-manifest
           overwrite: true
