Get ready to publish the first prod release with GHA

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,5 +68,5 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: ./distributables/latest-manifest/*
           file_glob: true
-          tag: test-latest-manifest
+          tag: latest-manifest
           overwrite: true
