Never try to update the server during CI tests
This isn't an immediate problem, but I suspect it can be at times, and
we had it set for Travis previously, so it'd be good to bring it
across too.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
 name: CI
 on: push
+env:
+  HTTPTOOLKIT_SERVER_DISABLE_AUTOUPDATE: 1 # Don't try to autoupdate during tests etc
 jobs:
   build:
     name: Build & test
