--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,13 @@ jobs:
 
           # Fix $HOME perms to make Firefox happy
           chown $(whoami) $HOME
+
       - run: npm run build
+        env:
+          SENTRY_AUTH_TOKEN: ${{ (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && secrets.SENTRY_AUTH_TOKEN) || '' }}
+          SENTRY_ORG: http-toolkit
+          SENTRY_PROJECT: httptoolkit-server
+
       - run: xvfb-run npm run test
       - run: xvfb-run npm run test:release
 
