--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           node-version: 14.6
 
+      - name: Set up JDK 11 for Java testing
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
       - name: Get npm cache directory
         id: npm-cache
         run: |
