--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cors": "^2.8.5",
     "cors-gate": "^1.1.3",
     "env-paths": "^1.0.0",
+    "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "global-agent": "^2.0.0",
     "global-tunnel-ng": "^2.7.1",
@@ -76,6 +77,7 @@
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
     "@types/node": "^12.7.9",
+    "@types/node-forge": "^0.9.9",
     "@types/request-promise-native": "^1.0.15",
     "@types/rimraf": "^2.0.2",
     "@types/ws": "^6.0.1",
