--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
       - uses: actions/setup-node@v1
         with:
-          node-version: 14.6
+          node-version: 14.17
 
       - name: Set up JDK 11 for Java testing
         uses: actions/setup-java@v1
@@ -51,6 +51,7 @@ jobs:
           SENTRY_AUTH_TOKEN: ${{ (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && secrets.SENTRY_AUTH_TOKEN) || '' }}
           SENTRY_ORG: http-toolkit
           SENTRY_PROJECT: httptoolkit-server
+          NPM_CONFIG_UNSAFE_PERM: true
 
       - run: xvfb-run npm run test
       - run: xvfb-run npm run test:release
