--- a/package.json
+++ b/package.json
@@ -37,13 +37,11 @@
     "@oclif/plugin-update": "^1.3.8",
     "@sentry/integrations": "^5.29.2",
     "@sentry/node": "^5.29.2",
-    "@types/command-exists": "^1.2.0",
     "@types/cors": "^2.8.7",
     "@types/node-fetch": "^2.5.4",
     "@types/tmp": "0.0.33",
     "async-mutex": "^0.1.3",
     "chrome-remote-interface": "^0.28.0",
-    "command-exists": "^1.2.8",
     "cors": "^2.8.5",
     "cors-gate": "^1.1.3",
     "env-paths": "^1.0.0",
@@ -54,6 +52,7 @@
     "graphql": "^14.7.0",
     "iconv-lite": "^0.4.24",
     "lodash": "^4.17.21",
+    "lookpath": "^1.2.1",
     "mime-types": "^2.1.27",
     "mockttp": "^1.2.1",
     "node-fetch": "^2.6.1",
