--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/httptoolkit/httptoolkit-server",
   "bugs": "https://github.com/httptoolkit/httptoolkit-server/issues",
   "dependencies": {
+    "@cypress/get-windows-proxy": "^1.6.2",
     "@devicefarmer/adbkit": "^2.11.2",
     "@graphql-tools/schema": "^6.0.18",
     "@graphql-tools/utils": "^6.0.18",
@@ -53,6 +54,7 @@
     "iconv-lite": "^0.4.24",
     "lodash": "^4.17.21",
     "lookpath": "^1.2.1",
+    "mac-system-proxy": "^1.0.0",
     "mime-types": "^2.1.27",
     "mockttp": "^2.0.0",
     "node-fetch": "^2.6.1",
