Switch to os-proxy-config for detection & update mac detection for fixes
Previously, scutil parsing errors weren't caught correctly, which could
cause crashes in some environments (although I'm still not actually sure
_which_ environments...)

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "homepage": "https://github.com/httptoolkit/httptoolkit-server",
   "bugs": "https://github.com/httptoolkit/httptoolkit-server/issues",
   "dependencies": {
-    "@cypress/get-windows-proxy": "^1.6.2",
     "@devicefarmer/adbkit": "^2.11.2",
     "@graphql-tools/schema": "^6.0.18",
     "@graphql-tools/utils": "^6.0.18",
@@ -54,12 +53,12 @@
     "iconv-lite": "^0.4.24",
     "lodash": "^4.17.21",
     "lookpath": "^1.2.1",
-    "mac-system-proxy": "^1.0.0",
     "mime-types": "^2.1.27",
     "mockttp": "^2.0.0",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
     "node-gsettings-wrapper": "^0.5.0",
+    "os-proxy-config": "^1.0.0",
     "portfinder": "^1.0.25",
     "registry-js": "^1.10.0",
     "rimraf": "^2.6.2",
