--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/cors": "^2.8.7",
     "@types/docker-modem": "^3.0.1",
     "@types/dockerode": "^3.2.4",
+    "@types/express-serve-static-core": "^4.17.24",
     "@types/node-fetch": "^2.5.4",
     "@types/tar-fs": "^2.0.0",
     "@types/tmp": "0.0.33",
@@ -80,7 +81,7 @@
     "@types/fs-extra": "^8.0.0",
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^12.7.9",
+    "@types/node": "^16.3.2",
     "@types/node-forge": "^0.9.9",
     "@types/request-promise-native": "^1.0.15",
     "@types/rimraf": "^2.0.2",
