--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@sentry/integrations": "^5.29.2",
     "@sentry/node": "^5.29.2",
     "@types/cors": "^2.8.7",
-    "@types/docker-modem": "^3.0.1",
     "@types/dockerode": "^3.2.4",
     "@types/express-serve-static-core": "^4.17.24",
     "@types/node-fetch": "^2.5.4",
@@ -48,7 +47,6 @@
     "chrome-remote-interface": "^0.28.0",
     "cors": "^2.8.5",
     "cors-gate": "^1.1.3",
-    "docker-modem": "^3.0.0",
     "dockerode": "^3.2.1",
     "env-paths": "^1.0.0",
     "express": "^4.17.1",
@@ -64,6 +62,7 @@
     "node-gsettings-wrapper": "^0.5.0",
     "os-proxy-config": "^1.1.1",
     "portfinder": "^1.0.25",
+    "raw-body": "^2.4.1",
     "registry-js": "^1.15.1",
     "rimraf": "^2.6.2",
     "tar-fs": "^2.1.1",
