--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@sentry/integrations": "^5.29.2",
     "@sentry/node": "^5.29.2",
     "@types/cors": "^2.8.7",
+    "@types/dns2": "^2.0.0",
     "@types/dockerode": "^3.2.4",
     "@types/express-serve-static-core": "^4.17.24",
     "@types/gunzip-maybe": "^1.4.0",
@@ -49,6 +50,7 @@
     "chrome-remote-interface": "^0.28.0",
     "cors": "^2.8.5",
     "cors-gate": "^1.1.3",
+    "dns2": "^2.0.1",
     "docker-file-parser": "^1.0.5",
     "dockerode": "^3.2.1",
     "env-paths": "^1.0.0",
