--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@sentry/node": "^5.29.2",
     "@types/cors": "^2.8.7",
     "@types/dns2": "^2.0.0",
-    "@types/dockerode": "^3.2.4",
+    "@types/dockerode": "^3.3.0",
     "@types/express-serve-static-core": "^4.17.24",
     "@types/gunzip-maybe": "^1.4.0",
     "@types/node-fetch": "^2.5.4",
@@ -52,7 +52,7 @@
     "cors-gate": "^1.1.3",
     "dns2": "^2.0.1",
     "docker-file-parser": "^1.0.5",
-    "dockerode": "^3.2.1",
+    "dockerode": "^3.3.1",
     "env-paths": "^1.0.0",
     "event-stream": "^4.0.1",
     "express": "^4.17.1",
@@ -64,6 +64,7 @@
     "lookpath": "^1.2.1",
     "mime-types": "^2.1.27",
     "mockttp": "^2.3.0",
+    "node-abort-controller": "^3.0.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
     "node-gsettings-wrapper": "^0.5.0",
