Set correct override permissions for non-root usage in Docker

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "node-dev ./bin/run start",
     "build:src": "rm -rf lib && tsc -b --force",
     "build:release": "oclif-dev manifest && webpack && ts-node ./pack.ts",
-    "prepare": "cd ./overrides/js && npm install",
+    "prepare": "ts-node ./prepare.ts",
     "prepack": "npm run build:src && oclif-dev manifest",
     "test": "cross-env TS_NODE_FILES=true mocha --exit -r ts-node/register 'test/**/*.spec.ts'",
     "test:release": "cross-env TEST_BUILT_TARBALL=1 npm run test"
@@ -87,6 +87,7 @@
     "@types/env-paths": "^1.0.2",
     "@types/express": "^4.16.1",
     "@types/fs-extra": "^8.0.0",
+    "@types/klaw": "^3.0.2",
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
     "@types/node": "^16.3.2",
@@ -102,6 +103,7 @@
     "fs-extra": "^8.1.0",
     "got": "^9.6.0",
     "graphql.js": "^0.6.1",
+    "klaw": "^4.0.1",
     "mocha": "^8.2.1",
     "needle": "^2.4.0",
     "node-dev": "^6.4.0",
