Run the Java Docker test as a non-root user
This ensures we're correctly covering the permissions configuration
of the injected overrides files.

--- a/test/fixtures/docker/java/Dockerfile
+++ b/test/fixtures/docker/java/Dockerfile
@@ -3,6 +3,11 @@ FROM openjdk:16-alpine3.13
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
+# We run the app with a non-root user, because this is a common pattern especially
+# in Java apps, and we need to ensure the injected file permissions support it:
+RUN adduser --uid 5000 -D appuser && chown -R appuser /usr/src/app
+USER appuser
+
 COPY . .
 
 RUN javac Main.java
