--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lodash": "^4.17.21",
     "lookpath": "^1.2.1",
     "mime-types": "^2.1.27",
+    "mobx": "^6.3.5",
     "mockttp": "^2.3.1",
     "node-abort-controller": "^3.0.1",
     "node-fetch": "^2.6.1",
