--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "lodash": "^4.17.21",
     "lookpath": "^1.2.1",
     "mime-types": "^2.1.27",
-    "mockttp": "^2.3.1",
+    "mobx": "^6.3.5",
+    "mockttp": "^2.4.0",
     "node-abort-controller": "^3.0.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^0.10.0",
