--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "ts-loader": "^6.0.0",
     "ts-node": "^8.4.1",
     "typescript": "^4.4.3",
+    "undici": "^4.9.5",
     "unirest": "^0.6.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.9",
