--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/cors": "^2.8.7",
     "@types/dns2": "^2.0.0",
     "@types/dockerode": "^3.3.0",
+    "@types/event-stream": "^4.0.0",
     "@types/express-serve-static-core": "^4.17.24",
     "@types/gunzip-maybe": "^1.4.0",
     "@types/node-fetch": "^2.5.4",
