--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@sentry/webpack-plugin": "^1.16.0",
     "@types/aws-lambda": "^8.10.15",
     "@types/chai": "^4.1.6",
+    "@types/decompress": "^4.2.4",
     "@types/env-paths": "^1.0.2",
     "@types/express": "^4.16.1",
     "@types/fs-extra": "^8.0.0",
@@ -102,6 +103,7 @@
     "chai": "^4.2.0",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^7.0.3",
+    "decompress": "^4.2.1",
     "fs-extra": "^8.1.0",
     "got": "^9.6.0",
     "graphql.js": "^0.6.1",
@@ -116,7 +118,6 @@
     "string-replace-loader": "^2.3.0",
     "stripe": "^7.4.0",
     "superagent": "^5.1.0",
-    "tarball-extract": "0.0.6",
     "ts-loader": "^6.0.0",
     "ts-node": "^8.4.1",
     "typescript": "^4.4.3",
