Use npm 8 in CI (to allow overriding dep versions)
This requires some fixes, including:
- Updates to support the new base image, which otherwise has some issues
  with npm permissions in this case.
- Tweaks to the release build process to ensure that the prepare script
  keeps working correctly with the different lifecycle behaviour.
- Pinning prebuild-install to v7, because v5 (used by some deps) doesn't
  support the env vars for cross-platform builds with npm v7+.

Regarding the base image: previously, the image had a default root
user, so the checkout was made as root, but GHA always runs run steps
as user 1001. After updating npm, it started to fail to install due to
permissions issues, because it was running as user 1001 while the
checkout was made as root.

The base image has now been updated to default to a 1001 user called
'build-user' who has passwordless sudo & docker permissions. With a
few small changes here, we can support that and everything should work
correctly with a single consistent user used in every step.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     name: Build & test
     runs-on: ubuntu-18.04
     container:
-      image: httptoolkit/act-build-base
+      image: httptoolkit/act-build-base:v2.0.0
       options: "--privileged" # Required for DIND tests
     env:
       DIND_HOST: unix:///tmp/docker.sock
@@ -17,6 +17,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14.18.3
+
+      - run: npm install -g npm@^8
 
       - name: Set up JDK 11 for Java testing
         uses: actions/setup-java@v1
@@ -31,20 +33,20 @@ jobs:
 
       - name: Prepare test environment
         run: |
-          apt-get update
-          apt-get install p7zip-full xterm
+          sudo apt-get update
+          sudo apt-get install p7zip-full xterm
 
           wget https://downloads.slack-edge.com/linux_releases/slack-desktop-4.12.2-amd64.deb
-          apt install ./slack-desktop-4.12.2-amd64.deb
+          sudo apt install ./slack-desktop-4.12.2-amd64.deb
 
-          cp test/no-sandbox-docker-wrapper.sh /usr/local/bin/google-chrome
-          cp test/no-sandbox-docker-wrapper.sh /usr/local/bin/slack
+          sudo cp test/no-sandbox-docker-wrapper.sh /usr/local/bin/google-chrome
+          sudo cp test/no-sandbox-docker-wrapper.sh /usr/local/bin/slack
 
           # Fix $HOME perms to make Firefox happy
-          chown $(whoami) $HOME
+          sudo chown $(whoami) $HOME
 
           # Start a DIND docker host, running in the background
-          dockerd -H $DIND_HOST &
+          sudo dockerd -H $DIND_HOST &
           sleep 5
 
           # Pre-pull lots of the Docker images we'll want to use later
