--- a/package.json
+++ b/package.json
@@ -127,6 +127,9 @@
     "webpack-cli": "^3.3.9",
     "xhr2": "^0.2.0"
   },
+  "overrides": {
+    "prebuild-install": "^7.0.0"
+  },
   "engines": {
     "node": ">=10.0.0"
   },
