--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "scripts": {
     "start": "node-dev ./bin/run start",
     "build:src": "rm -rf lib && tsc -b --force",
-    "build:release": "oclif manifest && webpack && ts-node ./pack.ts",
+    "build:release": "oclif-dev manifest && webpack && ts-node ./pack.ts",
     "prepare": "ts-node ./prepare.ts",
-    "prepack": "npm run build:src && oclif manifest",
+    "prepack": "npm run build:src && oclif-dev manifest",
     "test": "cross-env TS_NODE_FILES=true mocha --exit -r ts-node/register 'test/**/*.spec.ts'",
     "test:release": "cross-env TEST_BUILT_TARBALL=1 npm run test"
   },
@@ -82,6 +82,7 @@
     "win-version-info": "^3.1.1"
   },
   "devDependencies": {
+    "@oclif/dev-cli": "^1.19.4",
     "@sentry/webpack-plugin": "^1.16.0",
     "@types/aws-lambda": "^8.10.15",
     "@types/chai": "^4.1.6",
@@ -89,7 +90,6 @@
     "@types/env-paths": "^1.0.2",
     "@types/express": "^4.16.1",
     "@types/fs-extra": "^8.0.0",
-    "@types/glob": "^7.2.0",
     "@types/klaw": "^3.0.2",
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
@@ -105,7 +105,6 @@
     "cross-env": "^7.0.3",
     "decompress": "^4.2.1",
     "fs-extra": "^8.1.0",
-    "glob": "^7.2.0",
     "got": "^9.6.0",
     "graphql.js": "^0.6.1",
     "klaw": "^4.0.1",
@@ -113,7 +112,6 @@
     "needle": "^2.4.0",
     "node-dev": "^6.4.0",
     "node-noop": "^1.0.0",
-    "oclif": "^2.4.4",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "reqwest": "^2.0.5",
