Intercept global fetch in Node 18.2.0+
While global fetch was supported in Node 18, it was impossible to use
with proxies until 18.2.0. From this point onwards, it is usable as
long as you use a separate Undici dependency to do that configuration.

--- a/overrides/js/package.json
+++ b/overrides/js/package.json
@@ -5,6 +5,7 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "global-agent": "3.0.0",
-    "global-tunnel-ng": "2.7.1"
+    "global-tunnel-ng": "2.7.1",
+    "undici": "^5.2.0"
   }
 }
