--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "ts-loader": "^6.0.0",
     "ts-node": "^8.4.1",
     "typescript": "^4.4.3",
+    "umd-compat-loader": "^2.1.2",
     "undici": "^4.9.5",
     "unirest": "^0.6.0",
     "webpack": "^4.46.0",
