--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "bugs": "https://github.com/httptoolkit/httptoolkit-server/issues",
   "dependencies": {
     "@devicefarmer/adbkit": "^2.11.2",
-    "@graphql-tools/schema": "^7.1.5",
-    "@graphql-tools/utils": "^6.0.18",
+    "@graphql-tools/schema": "^8.5.0",
+    "@graphql-tools/utils": "^8.8.0",
     "@httptoolkit/browser-launcher": "^2.0.1",
     "@httptoolkit/osx-find-executable": "^2.0.1",
     "@oclif/command": "^1.5.4",
@@ -59,6 +59,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.11.0",
     "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
     "gunzip-maybe": "^1.4.2",
     "iconv-lite": "^0.4.24",
     "lodash": "^4.17.21",
