--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,13 +82,13 @@ jobs:
       matrix:
         include:
           - platform: Linux
-            os: "ubuntu-20.04"
+            os: "ubuntu-latest"
             test-script: "./unix.sh linux"
-          - platform: Mac 10.15
-            os: "macos-10.15"
+          - platform: Mac
+            os: "macos-latest"
             test-script: "./unix.sh darwin"
           - platform: Windows
-            os: "windows-2019"
+            os: "windows-latest"
             test-script: ".\\windows.bat"
       fail-fast: false
     name: Test on ${{ matrix.platform }}
