--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "lookpath": "^1.2.1",
     "mime-types": "^2.1.27",
     "mobx": "^6.3.5",
-    "mockttp": "^3.2.2",
+    "mockrtc": "^0.2.0",
+    "mockttp": "^3.2.3",
     "node-abort-controller": "^3.0.1",
     "node-fetch": "^2.6.1",
     "node-forge": "^1.3.0",
@@ -121,7 +122,7 @@
     "superagent": "^7.1.1",
     "ts-loader": "^6.0.0",
     "ts-node": "^8.4.1",
-    "typescript": "^4.4.3",
+    "typescript": "~4.6",
     "umd-compat-loader": "^2.1.2",
     "undici": "^5.8.0",
     "unirest": "^0.6.0",
@@ -162,7 +163,8 @@
       "@oclif/plugin-update",
       "vm2",
       "registry-js",
-      "win-version-info"
+      "win-version-info",
+      "node-datachannel"
     ],
     "update": {
       "s3": {
