Move to the new common destroyable-server lib

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "chrome-remote-interface": "^0.28.0",
     "cors": "^2.8.5",
     "cors-gate": "^1.1.3",
+    "destroyable-server": "^1.0.0",
     "dns2": "^2.0.1",
     "docker-file-parser": "^1.0.5",
     "dockerode": "^3.3.1",
