Build server releases for darwin-arm64

--- a/package.json
+++ b/package.json
@@ -186,7 +186,8 @@
         "targets": [
           "win32-x64",
           "linux-x64",
-          "darwin-x64"
+          "darwin-x64",
+          "darwin-arm64"
         ]
       }
     }
