--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,14 +84,23 @@ jobs:
     strategy:
       matrix:
         include:
-          - platform: Linux
-            os: "ubuntu-latest"
+          - platform: Ubuntu 22.04
+            os: "ubuntu-22.04"
             test-script: "./unix.sh linux"
-          - platform: Mac
-            os: "macos-latest"
+          - platform: Ubuntu 20.04
+            os: "ubuntu-20.04"
+            test-script: "./unix.sh linux"
+          - platform: Mac 12
+            os: "macos-12"
             test-script: "./unix.sh darwin"
-          - platform: Windows
-            os: "windows-latest"
+          - platform: Mac 11
+            os: "macos-11"
+            test-script: "./unix.sh darwin"
+          - platform: Windows 2022
+            os: "windows-2022"
+            test-script: ".\\windows.bat"
+          - platform: Windows 2019
+            os: "windows-2019"
             test-script: ".\\windows.bat"
       fail-fast: false
     name: Test on ${{ matrix.platform }}
