--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/httptoolkit/httptoolkit-server",
   "bugs": "https://github.com/httptoolkit/httptoolkit-server/issues",
   "dependencies": {
-    "@devicefarmer/adbkit": "^2.11.2",
+    "@devicefarmer/adbkit": "^3.2.4",
     "@graphql-tools/schema": "^8.5.0",
     "@graphql-tools/utils": "^8.8.0",
     "@httptoolkit/browser-launcher": "^2.1.0",
@@ -88,6 +88,7 @@
     "@oclif/dev-cli": "^1.19.4",
     "@sentry/webpack-plugin": "^1.16.0",
     "@types/aws-lambda": "^8.10.15",
+    "@types/bluebird": "^3.5.38",
     "@types/chai": "^4.1.6",
     "@types/decompress": "^4.2.4",
     "@types/env-paths": "^1.0.2",
