--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "mime-types": "^2.1.27",
     "mobx": "^6.3.5",
     "mockrtc": "^0.3.0",
+    "mocksecurity-check": "file:../mocksecurity-check",
     "mockttp": "^3.5.1",
     "node-abort-controller": "^3.0.1",
     "node-fetch": "^2.6.1",
